- added basic paysafecard support - new protocol for test payments with credit card - handled some uncaught exceptions - close connections to payment instance after exception - timeouts to payment instance shortened